0030594: Data Exchange - access violation within IGESGeom_BSplineCurve constructor

Added NULL check.